--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,5 @@
     "plugins": ["prettier-plugin-tailwindcss"],
     "semi": true,
     "printWidth": 80,
-    "tabWidth": 4,
-    "trailingComma": "es5"
+    "tabWidth": 4
 }
