--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/auth-helpers-nextjs": "^0.15.0",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.86.0",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.545.0",
     "next": "^16.0.5",
     "react": "19.1.0",
